--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,14 @@ header a {
     color: violet;
 }
 
+.quiz-wrapper {
+    padding: 50px 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+h1 {
+    margin: 0;
+}
